Model optimized with grid search git push

--- a/Project Codes/05. Modeling/01_19_2020_Listings_Supervised_Learning.ipynb
+++ b/Project Codes/05. Modeling/01_19_2020_Listings_Supervised_Learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3665,7 +3665,7 @@
        "6                0                0                0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3684,7 +3684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3708,7 +3708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3743,7 +3743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3774,7 +3774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3800,7 +3800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3820,14 +3820,14 @@
       "building tree 4 of 100\n",
       "building tree 5 of 100\n",
       "building tree 6 of 100\n",
-      "building tree 7 of 100building tree 8 of 100\n",
-      "\n",
+      "building tree 7 of 100\n",
+      "building tree 8 of 100\n",
       "building tree 9 of 100\n",
       "building tree 10 of 100\n",
       "building tree 11 of 100\n",
       "building tree 12 of 100\n",
-      "building tree 13 of 100building tree 14 of 100\n",
-      "\n",
+      "building tree 13 of 100\n",
+      "building tree 14 of 100\n",
       "building tree 15 of 100\n",
       "building tree 16 of 100\n",
       "building tree 17 of 100\n",
@@ -3852,7 +3852,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done  25 tasks      | elapsed:   28.9s\n"
+      "[Parallel(n_jobs=-1)]: Done  25 tasks      | elapsed:   28.6s\n"
      ]
     },
     {
@@ -3933,7 +3933,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:  1.7min finished\n"
+      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:  1.5min finished\n"
      ]
     },
     {
@@ -3965,16 +3965,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Create list of regression models to iterate over and test in pipeline\n",
-    "regressors = [RandomForestRegressor(), \n",
-    "              GradientBoostingRegressor(), \n",
-    "              BaggingRegressor(),\n",
-    "             MLPRegressor(),\n",
-    "             SGDRegressor()]"
+    "regressors = [RandomForestRegressor(random_state = 42, n_jobs=-1), \n",
+    "              GradientBoostingRegressor(random_state = 42), \n",
+    "              BaggingRegressor(random_state = 42, n_jobs=-1),\n",
+    "             MLPRegressor(random_state = 42 ),\n",
+    "             SGDRegressor(random_state = 42)]"
    ]
   },
   {
@@ -3989,7 +3989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4004,9 +4004,9 @@
       "                      min_weight_fraction_leaf=0.0, n_estimators='warn',\n",
       "                      n_jobs=None, oob_score=False, random_state=None,\n",
       "                      verbose=0, warm_start=False)\n",
-      "Mean R2 Score:  0.9419276139322944\n",
-      "Mean MSE Score:  -351.02501129274515\n",
-      "Mean MAE Score:  -8.394128388759407\n",
+      "Mean R2 Score:  0.9408693729746526\n",
+      "Mean MSE Score:  -357.4180830310178\n",
+      "Mean MAE Score:  -8.418442101920155\n",
       "=============================================\n",
       "=============================================\n",
       "GradientBoostingRegressor(alpha=0.9, criterion='friedman_mse', init=None,\n",
@@ -4018,18 +4018,18 @@
       "                          n_iter_no_change=None, presort='auto',\n",
       "                          random_state=None, subsample=1.0, tol=0.0001,\n",
       "                          validation_fraction=0.1, verbose=0, warm_start=False)\n",
-      "Mean R2 Score:  0.6641911053769383\n",
-      "Mean MSE Score:  -2029.8452268919295\n",
-      "Mean MAE Score:  -33.50674613811516\n",
+      "Mean R2 Score:  0.6642108515911384\n",
+      "Mean MSE Score:  -2029.7263941280034\n",
+      "Mean MAE Score:  -33.50648518774432\n",
       "=============================================\n",
       "=============================================\n",
       "BaggingRegressor(base_estimator=None, bootstrap=True, bootstrap_features=False,\n",
       "                 max_features=1.0, max_samples=1.0, n_estimators=10,\n",
       "                 n_jobs=None, oob_score=False, random_state=None, verbose=0,\n",
       "                 warm_start=False)\n",
-      "Mean R2 Score:  0.9414387687822868\n",
-      "Mean MSE Score:  -353.98145440880927\n",
-      "Mean MAE Score:  -8.476595283001618\n",
+      "Mean R2 Score:  0.9406944469498978\n",
+      "Mean MSE Score:  -358.47475185696396\n",
+      "Mean MAE Score:  -8.454339753848675\n",
       "=============================================\n"
      ]
     },
@@ -4061,9 +4061,9 @@
       "             n_iter_no_change=10, nesterovs_momentum=True, power_t=0.5,\n",
       "             random_state=None, shuffle=True, solver='adam', tol=0.0001,\n",
       "             validation_fraction=0.1, verbose=False, warm_start=False)\n",
-      "Mean R2 Score:  0.9389120673326617\n",
-      "Mean MSE Score:  -369.2678663118007\n",
-      "Mean MAE Score:  -11.172730736989479\n",
+      "Mean R2 Score:  0.9400637502499455\n",
+      "Mean MSE Score:  -362.29005198540153\n",
+      "Mean MAE Score:  -11.063020136280901\n",
       "=============================================\n",
       "=============================================\n",
       "SGDRegressor(alpha=0.0001, average=False, early_stopping=False, epsilon=0.1,\n",
@@ -4072,9 +4072,9 @@
       "             n_iter_no_change=5, penalty='l2', power_t=0.25, random_state=None,\n",
       "             shuffle=True, tol=0.001, validation_fraction=0.1, verbose=0,\n",
       "             warm_start=False)\n",
-      "Mean R2 Score:  -5462803751834.114\n",
-      "Mean MSE Score:  -3.3094448083223896e+16\n",
-      "Mean MAE Score:  -59615723.27229915\n",
+      "Mean R2 Score:  -31989028582892.18\n",
+      "Mean MSE Score:  -1.9387716125928557e+17\n",
+      "Mean MAE Score:  -109027058.25133845\n",
       "=============================================\n"
      ]
     }
@@ -4127,7 +4127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -4150,7 +4150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4159,7 +4159,7 @@
     "\n",
     "max_features= ['auto', 'sqrt', 'log2']\n",
     "\n",
-    "n_estimators = [10,50,75,100]\n",
+    "n_estimators = [100, 125, 150]\n",
     "\n",
     "bootstrap=[True, False]\n",
     "\n",
@@ -4175,7 +4175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -4195,7 +4195,7 @@
       "                                                   min_weight_fraction_leaf=0.0,\n",
       "                                                   n_estimators='warn',\n",
       "                                                   n_jobs=-1, oob_score=False,\n",
-      "                                                   random_...2, verbose=0,\n",
+      "                                                   random_...42, verbose=0,\n",
       "                                                   warm_start=False),\n",
       "                   iid='warn', n_iter=10, n_jobs=-1,\n",
       "                   param_distributions={'bootstrap': [True, False],\n",
@@ -4203,7 +4203,7 @@
       "                                        'max_features': ['auto', 'sqrt',\n",
       "                                                         'log2'],\n",
       "                                        'min_samples_leaf': [1, 3, 5],\n",
-      "                                        'n_estimators': [10, 50, 75, 100]},\n",
+      "                                        'n_estimators': [100, 125, 150]},\n",
       "                   pre_dispatch='2*n_jobs', random_state=None, refit=True,\n",
       "                   return_train_score=False, scoring='neg_mean_squared_error',\n",
       "                   verbose=1)>\n"
@@ -4212,16 +4212,16 @@
    ],
    "source": [
     "from sklearn.model_selection import RandomizedSearchCV\n",
-    "random_model = RandomizedSearchCV(RandomForestRegressor(random_state = 42, n_jobs=-1), param_distributions= param_grid, n_jobs=-1,\n",
+    "RFR_random = RandomizedSearchCV(RandomForestRegressor(random_state = 42, n_jobs=-1), param_distributions= param_grid, n_jobs=-1,\n",
     "                           scoring = ('neg_mean_squared_error'),\n",
     "                                verbose =1)\n",
     "\n",
-    "print('View random_model parameters: ', random_model.get_params)"
+    "print('View random_model parameters: ', RFR_random.get_params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -4236,24 +4236,24 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  30 out of  30 | elapsed:  2.2min finished\n"
+      "[Parallel(n_jobs=-1)]: Done  30 out of  30 | elapsed:  9.2min finished\n"
      ]
     }
    ],
    "source": [
-    "search = random_model.fit(X_train, y_train)"
+    "RFR_random.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-36.86161171092091\n"
+      "Best score from  -340.10106049420335\n"
      ]
     },
     {
@@ -4261,20 +4261,20 @@
       "text/plain": [
        "{'n_estimators': 100,\n",
        " 'min_samples_leaf': 1,\n",
-       " 'max_features': 'sqrt',\n",
+       " 'max_features': 'log2',\n",
        " 'max_depth': 30,\n",
        " 'bootstrap': True}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(search.score(X_train, y_train))\n",
+    "print('Best score from ',RFR_random.best_score_)\n",
     "\n",
-    "search.best_params_"
+    "RFR_random.best_params_"
    ]
   },
   {
@@ -4286,7 +4286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4295,20 +4295,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Set values for RandomForestRegressor hyperparameters\n",
-    "max_depth = [25, 30, 35]\n",
+    "max_depth = [24,25,27]\n",
     "\n",
-    "max_features= ['auto', 'sqrt', 'log2']\n",
+    "max_features= ['log2']\n",
     "\n",
-    "n_estimators = [80,100,120]\n",
+    "n_estimators = [100,120,140]\n",
     "\n",
-    "bootstrap=[True, False]\n",
+    "bootstrap=[False]\n",
     "\n",
-    "min_samples_leaf = [1,2,3]\n",
+    "min_samples_leaf = [1,2]\n",
     "\n",
     "param_grid = {'max_depth' : max_depth,\n",
     "            'max_features':max_features,\n",
@@ -4322,9 +4322,56 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 18 candidates, totalling 54 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create GridSearch\n",
+    "RFR_optimized = GridSearchCV(RandomForestRegressor(random_state = 42, n_jobs=-1), param_grid=param_grid,\n",
+    "                        n_jobs= -1, scoring='neg_mean_squared_error', verbose=1)\n",
+    "\n",
+    "#Fit to data\n",
+    "RFR_optimized.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "GridSearchCV(RandomForestRegressor(), X_train, y_train, n_jobs=)"
+    "print(RFR_optimized.best_score_)\n",
+    "\n",
+    "RFR_optimized.best_params_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualize the results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RFR_optimized.best_estimator_.feature_importances_"
    ]
   },
   {
