Ignore test data files, too large

--- a/Project Codes/01. Raw Data Aggregation Scripts/12_26_2019_Airbnb_Raw_Data_Aggregation.ipynb
+++ b/Project Codes/01. Raw Data Aggregation Scripts/12_26_2019_Airbnb_Raw_Data_Aggregation.ipynb
@@ -4,27 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Airbnb Raw Data Aggregation"
+    "**Airbnb Raw Data Aggregation**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Introduction\n",
+    "# Introduction\n",
     "\n",
-    "In this notebook I will be aggregating about a year’s worth of listings, reviews, and calendar information from [Airbnb](http://insideairbnb.com/get-the-data.html). \n",
+    "In this notebook I will be aggregating raw data from [Airbnb](http://insideairbnb.com/get-the-data.html) about their listings, calendar, and reviews data in the San Francisco(SF) area. \n",
     "\n",
-    "The data pertains to the San Francisco (SF) area from December of 2018 through December of 2019.\n",
+    "Listings and Reviews data pertains to December of 2018 through December of 2019.\n",
+    "Calendar data is a little more encompassing, and ranges from January 2018 through December 2019. The additional months are to get more data for Time Series Analysis\n",
     "\n",
-    "I am aggregating the listings, reviews, and calendar information into separate data frames and writing them to CSV files for further analysis downstream. Aggregated files will not be available on GitHub; however, you can view all of the raw data used  [here](https://github.com/KishenSharma6/Airbnb-SF_ML_-_Text_Analysis/tree/master/Data/01_Raw/SF%20Airbnb%20Raw%20Data)."
+    "Raw data can be found [here](https://github.com/KishenSharma6/Airbnb-SF_ML_-_Text_Analysis/tree/master/Data/01_Raw/SF%20Airbnb%20Raw%20Data)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aggregation"
+    "## Read in libraries"
    ]
   },
   {
@@ -35,8 +36,22 @@
    "source": [
     "#Read in libraries\n",
     "import pandas as pd\n",
-    "import glob\n",
-    "\n",
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set path to raw data on local machine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Set path to location of SF Airbnb raw data\n",
     "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\01_Raw\\SF Airbnb Raw Data/'"
    ]
@@ -45,7 +60,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**SF Listings Data Aggregation(11/2018 - 12/2019)**"
+    "# Raw Data Aggregation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SF Listings Data Aggregation(11/2018 - 12/2019)"
    ]
   },
   {
@@ -353,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**SF Reviews Data Aggregation(11/2018 - 12/2019)**"
+    "## SF Reviews Data Aggregation(11/2018 - 12/2019)"
    ]
   },
   {
@@ -510,7 +532,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**SF Calendar Data Aggregation(09/2018 - 10/2019)**"
+    "## SF Calendar Data Aggregation(01/2018 - 12/2019)"
    ]
   },
   {
@@ -654,6 +676,13 @@
     "\n",
     "#Check to make sure columns have been properly concatenate\n",
     "calendar.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write aggregated files to csv for data cleaning"
    ]
   },
   {
