--- a/Project Codes/06. Model Evaluation/2020_0129_Listings_Model_Evaluation.ipynb
+++ b/Project Codes/06. Model Evaluation/2020_0129_Listings_Model_Evaluation.ipynb
@@ -61,18 +61,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Set path to model location\n",
-    "path = r''\n",
-    "#Read in trained model\n",
-    "model = joblib.load(filename)\n",
+    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\04_Models'\n",
     "\n",
+    "#Read in trained model\n",
+    "model = joblib.load(path + '/2020_0128_Price_Predictor_Final.sav')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Read in test data\n",
     "\n",
-    "#Check test data shape\n"
+    "#Check test data shape"
    ]
   },
   {
@@ -82,10 +90,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv='warn', error_score='raise-deprecating',\n",
+       "             estimator=RandomForestRegressor(bootstrap=True, criterion='mse',\n",
+       "                                             max_depth=None,\n",
+       "                                             max_features='auto',\n",
+       "                                             max_leaf_nodes=None,\n",
+       "                                             min_impurity_decrease=0.0,\n",
+       "                                             min_impurity_split=None,\n",
+       "                                             min_samples_leaf=1,\n",
+       "                                             min_samples_split=2,\n",
+       "                                             min_weight_fraction_leaf=0.0,\n",
+       "                                             n_estimators='warn', n_jobs=-1,\n",
+       "                                             oob_score=False, random_state=42,\n",
+       "                                             verbose=0, warm_start=False),\n",
+       "             iid='warn', n_jobs=-1,\n",
+       "             param_grid={'bootstrap': [False], 'max_depth': [25, 30, 35],\n",
+       "                         'max_features': ['sqrt'], 'min_samples_leaf': [1, 2],\n",
+       "                         'min_samples_split': [5, 6],\n",
+       "                         'n_estimators': [225, 250, 275]},\n",
+       "             pre_dispatch='2*n_jobs', refit='r2', return_train_score=False,\n",
+       "             scoring=['r2', 'neg_mean_absolute_error',\n",
+       "                      'neg_mean_squared_error'],\n",
+       "             verbose=1)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
+   ]
   },
   {
    "cell_type": "code",
