--- a/Project Codes/03. Exploratory Data Analysis/2019_1227_Listings_EDA.ipynb
+++ b/Project Codes/03. Exploratory Data Analysis/2019_1227_Listings_EDA.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "In the following notebook, I will be performing an EDA of some Airbnb data in the San Francisco area. This data pertains to the last calendar year, which at the time of this analysis would be December 2018 - December 2019.\n",
+    "In the following notebook, I will be performing an EDA of Airbnb data in the San Francisco area. This data pertains to the last calendar year, which at the time of this analysis would from December 2018 through December 2019.\n",
     "\n",
     "In the following analysis, I will be looking to explore the data and answer the following questions:\n",
     "\n",
